--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,200;1,700&display=swap" rel="stylesheet">
 
+  <!-- Icons -->
+  <script src="https://unpkg.com/feather-icons"></script>
+
   <!-- My Style -->
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -25,5 +28,8 @@
       <a href="#contact">Contact</a>
     </div>
   </nav>
+  <script>
+    feather.replace()
+  </script>
 </body>
 </html>
